--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@types/three": "^0.144.0",
+    "bootstrap": "^5.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "three": "^0.144.0",
